added background image

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,8 +45,8 @@
       {{{ body }}}
 
     </main> 
-     <main class="image1" id="main-image">
-    <img src="/groupProject-2/DishSwap/public/images/ella-olsson-rD3YrnhTmf0-unsplash.jpg"> 
+     <main  id="main-image">
+    <img src="/images/ella-olsson-rD3YrnhTmf0-unsplash.jpg">
     </main> 
  
     <footer>
