--- a/views/recipeCreate.handlebars
+++ b/views/recipeCreate.handlebars
@@ -12,3 +12,40 @@
     <button class="btn btn-primary">Fund this Project!</button>
   </p>
 </div>
+
+
+{{!-- <div class="text-center">
+  {{#if isEditing}}
+    <h2>Edit Recipe</h2>
+  {{else}}
+    <h2>Create Recipe</h2>
+  {{/if}}
+
+  <form class="form recipe-form" method="POST" action="{{action}}">
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input class="form-input" type="text" id="name" name="name" value="{{name}}" />
+    </div>
+    <div class="form-group">
+      <label for="emoji">Emoji:</label>
+      <input class="form-input" type="text" id="emoji" name="emoji" value="{{emoji}}" />
+    </div>
+    <div class="form-group">
+      <label for="description">Description:</label>
+      <textarea class="form-input" id="description" name="description">{{description}}</textarea>
+    </div>
+    <div class="form-group">
+      <label for="needed_funding">Needed Funding:</label>
+      <input class="form-input" type="number" id="needed_funding" name="needed_funding" value="{{needed_funding}}" />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">
+        {{#if isEditing}}
+          Update Recipe
+        {{else}}
+          Create Recipe
+        {{/if}}
+      </button>
+    </div>
+  </form>
+</div> --}}
