--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
   <title>DishSwap</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 
 <body>
@@ -24,21 +25,25 @@
   </div>
   </header>
 
-  <button class="login" id="main-login">
-    <a href="/login">Create Account/Login</a>
 
-  </button>
 
-{{!-- 
        <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <button class="no-button" id="logout">Create Account/Login</button>
+        <a href="/profile">profile</a> |       
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">Create Account/Login</a>
+
         {{/if}}
-      </nav>  --}}
+
+         {{!-- {{#if logged_in}}
+        <a href="/profile">profile</a> |
+        <button class="no-button" id="logout">Create Account/Login</button>
+        {{else}}
+        <a href="/login">Create Account/Login</a>
+        {{/if}} --}}
+      </nav> 
     </header>
      <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
