--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,1 +1,27 @@
+<div class="text-center">
+  <h2>Welcome, {{profileName}}!</h2>
+</div>
 
+{{#if recipes.length}}
+  <div class="row mt-4">
+    <div class="col-md-6">
+      <h3>Your Recipes:</h3>
+
+      <ul>
+        {{#each recipes as |recipe|}}
+          <li>
+            <a href="/recipe/{{recipe.id}}">{{recipe.name}}</a>
+          </li>
+        {{/each}}
+      </ul>
+    </div>
+  </div>
+{{else}}
+  <div class="text-center">
+    <p>You haven't created any recipes yet.</p>
+  </div>
+{{/if}}
+
+<div class="text-center mt-4">
+  <a href="/create-recipe" class="btn btn-primary">Create a New Recipe</a>
+</div>
