bugfixed createRecipe route and create a new recipe button

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,5 +23,5 @@
 {{/if}}
 
 <div class="text-center mt-4">
-  <a href="/create-recipe" class="btn btn-primary">Create a New Recipe</a>
+  <a href="/recipeCreate" class="btn btn-primary">Create a New Recipe</a>
 </div>
