created recipe route and basic recipe handlebars template

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,7 +59,7 @@
       {{!-- </nav> 
     {{!-- </header> --}} --}} 
 
-     <div class="dropdown">
+     <div class="dropdown is-right">
         <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fa-duotone fa-circle-chevron-down fa-lg" style="--fa-primary-color: #0735ed; --fa-secondary-color: #9fa0a3;"></i>
         </button>
