--- a/views/recipe.handlebars
+++ b/views/recipe.handlebars
@@ -1,9 +1,15 @@
+<link rel="stylesheet" href="/css/recipe-card.css">
+
 <div class="recipe-card">
-  <h2>{{name}}</h2>
+  <h2><b>{{name}}</b></h2>
 
-  <h3>Ingredients:</h3>
-  <p>{{ingredients}}</p>
+  <div class="ingredients">
+    <h3>Ingredients:</h3>
+    <p>{{ingredients}}</p>
+  </div>
 
-  <h3>Instructions:</h3>
-  <p>{{instructions}}</p>
+  <div class="instructions">
+    <h3>Instructions:</h3>
+    <p>{{instructions}}</p>
+  </div>
 </div>
