--- a/views/recipeCreate.handlebars
+++ b/views/recipeCreate.handlebars
@@ -9,20 +9,32 @@
     <h3>Create a New Recipe:</h3>
 
     <form class="form new-recipe-form">
-            <div class="form-group">
-        <label for="recipe-name">Recipe name:</label>
-        <input class="form-input" type="text" id="recipe-name" name="recipe-name" />
-      </div>
-
       <div class="form-group">
-        <label for="recipe-desc">Description:</label>
-        <textarea class="form-input" id="recipe-desc" name="recipe-desc"></textarea>
+        <label for="recipe-name">Recipe name:</label>
+        <input
+          class="form-input"
+          type="text"
+          id="recipe-name"
+          name="recipe-name"
+        />
       </div>
 
-    
       <div class="form-group">
         <label for="recipe-ingredients">Ingredients:</label>
-        <textarea class="form-input" id="recipe-ingredients" name="recipe-ingredients"></textarea>
+        <textarea
+          class="form-input"
+          id="recipe-ingredients"
+          name="recipe-ingredients"
+        ></textarea>
+      </div>
+
+      <div class="form-group">
+        <label for="recipe-desc">Instructions:</label>
+        <textarea
+          class="form-input"
+          id="recipe-desc"
+          name="recipe-desc"
+        ></textarea>
       </div>
 
       <div class="form-group">
@@ -32,22 +44,24 @@
   </div>
 
   {{#if recipes.length}}
-  <div class="col-md-6 recipe-list">
-    <h3>Current Recipes:</h3>
+    <div class="col-md-6 recipe-list">
+      <h3>Current Recipes:</h3>
 
-    {{#each recipes as |recipe|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/recipe/{{recipe.id}}">{{recipe.name}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{recipe.id}}">DELETE</button>
-      </div>
+      {{#each recipes as |recipe|}}
+        <div class="row mb-2">
+          <div class="col-md-8">
+            <h4><a href="/recipe/{{recipe.id}}">{{recipe.name}}</a></h4>
+          </div>
+          <div class="col-md-4">
+            <button
+              class="btn btn-sm btn-danger"
+              data-id="{{recipe.id}}"
+            >DELETE</button>
+          </div>
+        </div>
+      {{/each}}
     </div>
-    {{/each}}
-  </div>
   {{/if}}
 </div>
 
 <script src="./js/recipeCreate.js"></script>
-
